--- a/opencv_lab/opencv_lab7/opencv_lab7.vcxproj
+++ b/opencv_lab/opencv_lab7/opencv_lab7.vcxproj
@@ -118,6 +118,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="lab07.cpp" />
+    <ClCompile Include="TrackingObject.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TrackingObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
