--- a/opencv_lab/opencv_lab7/opencv_lab7.vcxproj.filters
+++ b/opencv_lab/opencv_lab7/opencv_lab7.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="lab07.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="TrackingObject.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TrackingObject.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
