--- a/opencv_lab/opencv_lab3/opencv_lab3.vcxproj
+++ b/opencv_lab/opencv_lab3/opencv_lab3.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{EB52C13D-85DB-4E26-ADA0-3FBDFE069171}</ProjectGuid>
     <RootNamespace>opencv_lab3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <ProjectName>opencv_lab03</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
