--- a/opencv_lab/opencv_lab5/opencv_lab5.vcxproj
+++ b/opencv_lab/opencv_lab5/opencv_lab5.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{679EEEA3-D3C0-4438-9911-C2B667226BE2}</ProjectGuid>
     <RootNamespace>opencv_lab5</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <ProjectName>opencv_lab05</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
