--- a/opencv_lab/opencv_lab6/opencv_lab6.vcxproj
+++ b/opencv_lab/opencv_lab6/opencv_lab6.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{508DD3D0-A7EC-47C0-8F19-10A1938ADA61}</ProjectGuid>
     <RootNamespace>opencv_lab6</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <ProjectName>opencv_lab06</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
