--- a/opencv_lab/opencv_lab7/opencv_lab7.vcxproj
+++ b/opencv_lab/opencv_lab7/opencv_lab7.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{8ED20F08-143C-4B3E-A6FB-43D0EFAB3345}</ProjectGuid>
     <RootNamespace>opencv_lab7</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <ProjectName>opencv_lab07</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
