--- a/opencv_lab/opencv_lab9/opencv_lab9.vcxproj
+++ b/opencv_lab/opencv_lab9/opencv_lab9.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{090AFD3A-723E-4FC8-99B4-DA065401D24A}</ProjectGuid>
     <RootNamespace>opencv_lab9</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <ProjectName>opencv_lab09</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
